--- a/codeGyan/points.html
+++ b/codeGyan/points.html
@@ -46,19 +46,19 @@
           <td>a</td>
         </tr>
         <tr>
-          <td>a</td>
-          <td>a</td>
-        </tr>
-        <tr>
-          <td>a</td>
+          <td>git init</td>
           <td>a</td>
         </tr>
         <tr>
-          <td>a</td>
+          <td>extension install gitignore</td>
           <td>a</td>
         </tr>
         <tr>
+          <td>"scripts": { "dev": "nodemon server.ts" },</td>
           <td>a</td>
+        </tr>
+        <tr>
+          <td>set up eslint extension</td>
           <td>a</td>
         </tr>
         <tr>
