--- a/codeGyan/points.html
+++ b/codeGyan/points.html
@@ -62,8 +62,37 @@
           <td>a</td>
         </tr>
         <tr>
+          <td>npm init @eslint/config</td>
           <td>a</td>
+        </tr>
+        <tr>
+          <td>create .prettierrc.json</td>
+          <td>
+            <div>create rule as</div>
+            <div>{ "tabwidth":2 }</div>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <div>npm i express</div>
+            <div>npm install -D @types/express</div>
+          </td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>create app.ts into src folder on root</td>
           <td>a</td>
+        </tr>
+        <tr>
+          <td>
+            <div>npm i dotenv</div>
+            <div>npm i -D @types/dotenv</div>
+          </td>
+          <td>a</td>
+        </tr>
+        <tr>
+          <td>Why we need Mongoose</td>
+          <td>because of different operatiing systems we use mongoose between mongo and application</td>
         </tr>
         <tr>
           <td>a</td>
