--- a/codeGyan/points.html
+++ b/codeGyan/points.html
@@ -92,11 +92,20 @@
         </tr>
         <tr>
           <td>Why we need Mongoose</td>
-          <td>because of different operatiing systems we use mongoose between mongo and application</td>
+          <td>
+            because of different operatiing systems we use mongoose between
+            mongo and application
+          </td>
         </tr>
         <tr>
-          <td>a</td>
-          <td>a</td>
+          <td>Middleware</td>
+          <td>
+            <img
+              src="./Screenshot 2025-05-06 164625.png"
+              width="90%"
+              height="90%"
+            />
+          </td>
         </tr>
         <tr>
           <td>a</td>
