--- a/ChaiOurCodeBackEnd/javascript/index.html
+++ b/ChaiOurCodeBackEnd/javascript/index.html
@@ -173,8 +173,8 @@
           <td>23</td>
           <td>THIS and arrow function</td>
           <td>
-            <div></div>
-            <div></div>
+            <div>THIS works with object context</div>
+            <div>arrow functions do not bind their own this—</div>
             <div>
               function doesThisWorksInFunction() { let user = "Jim";
               console.log(this.user); } doesThisWorksInFunction(); // undefined
@@ -183,8 +183,8 @@
           </td>
         </tr>
         <tr>
-          <td>a</td>
-          <td>a</td>
+          <td>24</td>
+          <td>Immediately Invoked Function Expressions IIFE</td>
           <td>
             <div></div>
             <div></div>
