--- a/ChaiOurCodeBackEnd/javascript/index.html
+++ b/ChaiOurCodeBackEnd/javascript/index.html
@@ -186,14 +186,16 @@
           <td>24</td>
           <td>Immediately Invoked Function Expressions IIFE</td>
           <td>
-            <div></div>
-            <div></div>
+            <div>// ()(); don't forget ; semicolon after IFFE</div>
+            <div>
+              see differnce between regular and IFFE function in ex File 23.js
+            </div>
             <div></div>
           </td>
         </tr>
         <tr>
-          <td>a</td>
-          <td>a</td>
+          <td>25</td>
+          <td>How does javascript execute code + call stack</td>
           <td>
             <div></div>
             <div></div>
