--- a/React19StepByStep/tuturialChap.html
+++ b/React19StepByStep/tuturialChap.html
@@ -17,6 +17,10 @@
         text-align: left;
         padding: 6px 11px;
       }
+      .q {
+        color: blue;
+        font-weight: 700;
+      }
     </style>
   </head>
   <body>
@@ -33,14 +37,22 @@
           <td>3</td>
           <td>2 Setup React Environment | Install React</td>
           <td>
-            <div></div>
-            <div></div>
-            <div></div>
+            <div>
+              what is vite: modern frontend build tool - Build production-ready
+              bundles - Fast
+            </div>
+            <div>
+              HMR (Hot Module Replacement) - Only updates the parts of the code
+              that changed, not the whole app.
+            </div>
+            <div>
+              1 - install vite 2 - npm install vite --save-dev (install locally)
+            </div>
           </td>
         </tr>
         <tr>
-          <td>a</td>
-          <td></td>
+          <td>4</td>
+          <td>http://localhost:5173/</td>
           <td>
             <div></div>
             <div></div>
@@ -48,20 +60,29 @@
           </td>
         </tr>
         <tr>
-          <td>a</td>
-          <td></td>
+          <td>5</td>
+          <td>Use and Learn React without Install</td>
           <td>
-            <div></div>
-            <div></div>
+            <div>you may use vite editor as sandcode</div>
+
             <div></div>
           </td>
         </tr>
         <tr>
-          <td>a</td>
-          <td></td>
+          <td>6</td>
+          <td>5 Hello World</td>
           <td>
-            <div></div>
-            <div></div>
+            <div>how react apps load</div>
+            <div id="root"></div>
+            <div>
+              index.html - main.jsx -
+              createRoot(document.getElementById('root')).render() - app.js -
+            </div>
+            <div class="q">why component name should start with Cap letter</div>
+            <div>
+              Because to help react to make a difference between component name
+              or eith its an html tag as p, div, input>
+            </div>
             <div></div>
           </td>
         </tr>
