--- a/React19StepByStep/tuturialChap.html
+++ b/React19StepByStep/tuturialChap.html
@@ -87,12 +87,22 @@
           </td>
         </tr>
         <tr>
-          <td>a</td>
-          <td></td>
+          <td>7</td>
+          <td>#6 File and Folder structure</td>
           <td>
-            <div></div>
-            <div></div>
-            <div></div>
+            <div>
+              if working with vite, and you have to change your localhost or
+              port you can give in vite.config
+            </div>
+            <div>
+              eslint.config, holds es6 configuration, versions and all that, we
+              can give rules like, max-length of a function, if
+            </div>
+            <div>
+              if we have define any variable and did not use it, it will give an
+              error at the time of build
+            </div>
+            <div>difference between public and assets folder - public as name says,</div>
           </td>
         </tr>
         <tr>
