--- a/React19StepByStep/tuturialChap.html
+++ b/React19StepByStep/tuturialChap.html
@@ -102,12 +102,14 @@
               if we have define any variable and did not use it, it will give an
               error at the time of build
             </div>
-            <div>difference between public and assets folder - public as name says,</div>
+            <div>
+              difference between public and assets folder - public as name says,
+            </div>
           </td>
         </tr>
         <tr>
-          <td>a</td>
-          <td></td>
+          <td>8</td>
+          <td>#7 Make First Component</td>
           <td>
             <div></div>
             <div></div>
@@ -115,35 +117,47 @@
           </td>
         </tr>
         <tr>
-          <td>a</td>
-          <td></td>
+          <td>9</td>
+          <td>#8 Importing and Exporting Components</td>
           <td>
-            <div></div>
+            <div>export default and only export as:</div>
+            <div>
+              export function Login() { return
+              <div>Login</div>
+              ; } // export default Login
+            </div>
+            <div>export default Login</div>
+            <div>import Login from ''</div>
+            <div>AND</div>
+            <div>export Login()=>{}</div>
+            <div>import {Login} from ''</div>
+          </td>
+        </tr>
+        <tr>
+          <td>10</td>
+          <td>#9 Writing Markup with JSX</td>
+          <td>
+            <div>JSX - you can write html into javascript</div>
             <div></div>
             <div></div>
           </td>
         </tr>
         <tr>
-          <td>a</td>
-          <td></td>
+          <td>15</td>
+          <td>#14 Upgrade React 19 Version</td>
           <td>
-            <div></div>
+            <div>how to update new version</div>
+            <div>^19.3.1 - 19 major, 3 Minor, 1 patch</div>
+            <div>npm i react@rc</div>
+            <div>npm i react-dom@rc</div>
+            <div>You may go to see at https://react.dev/blog</div>
             <div></div>
             <div></div>
           </td>
         </tr>
         <tr>
-          <td>a</td>
-          <td></td>
-          <td>
-            <div></div>
-            <div></div>
-            <div></div>
-          </td>
-        </tr>
-        <tr>
-          <td>a</td>
-          <td></td>
+          <td>16</td>
+          <td>#15 State</td>
           <td>
             <div></div>
             <div></div>
