--- a/React19StepByStep/HOOKS.html
+++ b/React19StepByStep/HOOKS.html
@@ -47,7 +47,12 @@
       </div>
       <div>2 - Runs after rendering to handle side effects</div>
       <div>3 - cleanup logic and prevents memory leak</div>
-      <div></div>
+      <div>[] this is the dependency array,</div>
+      <div>if it is empty then useEffect will run atleast one time</div>
+      <div>
+        [element] - if it has some element, then it will run when any change
+        oocures in element
+      </div>
     </div>
     <div class="hook">
       <h2>Hook -</h2>
