--- a/SangumMukhergiReact/notes.html
+++ b/SangumMukhergiReact/notes.html
@@ -36,6 +36,14 @@
           && - checks first value if it is true then go to see the next,
           otherwise will not go further
         </div>
+        <div><h3>&& AND</h3></div>
+        <div>if all are true - true</div>
+        <div>if one is false - false</div>
+        <div>if first is false - stop and will not go furture</div>
+        <div><h3>|| OR</h3></div>
+        <div>will go to see the next if first is false</div>
+        <div></div>
+        <div></div>
       </div>
       <div class="content">
         <h3>topic</h3>
