--- a/SangumMukhergiReact/notes.html
+++ b/SangumMukhergiReact/notes.html
@@ -46,11 +46,11 @@
         <div></div>
       </div>
       <div class="content">
-        <h3>topic</h3>
-        <div>aaa</div>
+        <h3>Template Literals</h3>
+        <div>`${}`</div>
       </div>
       <div class="content">
-        <h3>topic</h3>
+        <h3>Ternary operators</h3>
         <div>aaa</div>
       </div>
       <div class="content">
