--- a/React19StepByStep/tuturialChap.html
+++ b/React19StepByStep/tuturialChap.html
@@ -34,6 +34,11 @@
       </thead>
       <tbody>
         <tr>
+          <td>51 days</td>
+          <td>Native and react</td>
+          <td>10 - 10 -10</td>
+        </tr>
+        <tr>
           <td>3</td>
           <td>2 Setup React Environment | Install React</td>
           <td>
